--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,10 +3,11 @@
 // # Only the main Sass file needs front matter (the dashes are enough)
 
 @import "variables";
-@import "bootstrap/bootstrap";
-@import "syntax-highlighting";
-@import "bootstrap-4-jekyll/bootstrap-4-jekyll";
-@import "bootstrap_customization";
+@import "syntax-highlighting.scss";
+@import "bootstrap_customization.scss";
+@import "bootstrap/bootstrap.scss";
+@import "bootstrap-4-jekyll/bootstrap-4-jekyll.scss";
+@import "font-awesome/scss/fontawesome.scss"
 
 
 /* Reset styles */
