Change sticky footer id name

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,7 +41,7 @@ body {
   text-align: center;
 }
 /* Wrapper for page content to push down footer */
-#wrap {
+#stikky-wrap {
   padding-bottom: 5rem;	
   min-height: 100%;
   height: auto;
