Fix styling links

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="{{ site.author }}">
   <meta name="description" content="{{ site.description }}">
-  <link rel="favicon" href="/static/images/favicon.ico">
+  <!-- <link rel="favicon" href="/assets/images/favicon.ico"> -->
 
   <!-- Custom metadata -->
   <meta name="format-detection" content="telephone=no"> <!-- Prevent iOS from telephone number auto-detect for all numbers -->
@@ -16,17 +16,17 @@
   {%- endif -%}
 
   <!-- Custom styling -->
-  <link rel="stylesheet" href="{{ "/assets/css/main.scss" | relative_url }}">
+  <link rel="stylesheet" type="text/css" href="/assets/css/main.scss" />
   
   <!-- FontAwesome styling -->
-  <link rel="stylesheet" href="{{ "/assets/css/font-awesome/css/all.css" | relative_url }}">
+  <link rel="stylesheet" type="text/css" href="/assets/css/font-awesome/css/all.css" />
   
   <!-- Bootstrap JavaScript -->
-  <script src="{{ "/assets/javascript/bootstrap/jquery.min.js" | relative_url }}"></script>
-  <script src="{{ "/assets/javascript/bootstrap/bootstrap.bundle.min.js" | relative_url }}"></script>
+  <script src="/assets/js/bootstrap/jquery.min.js"></script>
+  <script src="/assets/js/bootstrap/bootstrap.bundle.min.js"></script>
 
   <!-- FontAwesome JavaScript -->
-  <script src="{{ "/assets/javascript/font-awesome/js/all.js" | relative_url }}"></script>
+  <script src="/assets/js/font-awesome/js/all.js"></script>
 
   <!-- Add SEO here -->
   <!-- include "seo" tag -->
