--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,33 @@
 <footer>
-  <div id="footer">
-      <div class="container">
-          <p class="text-muted">© All rights reserved. Powered by <a href="http://jekyllrb.com/">Jekyll</a> and <a href="http://www.github.com/jekyller/sustain">sustain</a> with ♥</p>
+  <div class="container-fluid" id="footer">
+    <div class="row">
+      <div class="col">
+        <h1>{{ site.title | escape }}</h1>
       </div>
+    </div>
+    <div class="row">
+      <div class="col-6">
+        {%- if site.author -%}
+          <h2>{{ site.author | escape }}</h2>
+        {%- else -%}
+          <h2>{{ site.title | escape }}</h2>
+        {%- endif -%}
+      </div>
+      <div class="col-6">
+        {%- if site.email -%}
+          <p>
+            <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+          </p>
+        {%- endif -%}
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <p class="text-muted">
+          © All rights reserved. Powered by <a href="http://jekyllrb.com/">Jekyll</a>, <a href="http://www.github.com/jekyller/sustain">sustain</a>, and <a href="https://nicolas-van.github.io/bootstrap-4-github-pages/">Bootstrap 4 Github Pages</a> with ♥
+        </p>
+      </div>
+    </div>
   </div>
 </footer>
 <div class="footer"></div>
