Format bootstrap partials

--- a/assets/css/bootstrap/_card.scss
+++ b/assets/css/bootstrap/_card.scss
@@ -1,6 +1,4 @@
-//
 // Base styles
-//
 
 .card {
   position: relative;
@@ -32,8 +30,7 @@
 }
 
 .card-body {
-  // Enable `flex-grow: 1` for decks and groups so that card blocks take up
-  // as much space as possible, ensuring footers are aligned to the bottom.
+  // Enable `flex-grow: 1` for decks and groups so that card blocks take up as much space as possible, ensuring footers are aligned to the bottom.
   flex: 1 1 auto;
   padding: $card-spacer-x;
   color: $card-color;
@@ -62,9 +59,7 @@
   }
 }
 
-//
 // Optional textual caps
-//
 
 .card-header {
   padding: $card-spacer-y $card-spacer-x;
@@ -95,9 +90,7 @@
 }
 
 
-//
 // Header navs
-//
 
 .card-header-tabs {
   margin-right: -$card-spacer-x / 2;
@@ -112,6 +105,7 @@
 }
 
 // Card image
+
 .card-img-overlay {
   position: absolute;
   top: 0;
@@ -166,24 +160,20 @@
 }
 
 
-//
 // Card groups
-//
 
 .card-group {
   display: flex;
   flex-direction: column;
 
-  // The child selector allows nested `.card` within `.card-group`
-  // to display properly.
+  // The child selector allows nested `.card` within `.card-group` to display properly.
   > .card {
     margin-bottom: $card-group-margin;
   }
 
   @include media-breakpoint-up(sm) {
     flex-flow: row wrap;
-    // The child selector allows nested `.card` within `.card-group`
-    // to display properly.
+    // The child selector allows nested `.card` within `.card-group` to display properly.
     > .card {
       // Flexbugs #4: https://github.com/philipwalton/flexbugs#flexbug-4
       flex: 1 0 0%;
@@ -231,9 +221,7 @@
 }
 
 
-//
 // Columns
-//
 
 .card-columns {
   .card {
@@ -254,9 +242,7 @@
 }
 
 
-//
 // Accordion
-//
 
 .accordion {
   > .card {
