--- a/assets/css/bootstrap/_grid.scss
+++ b/assets/css/bootstrap/_grid.scss
@@ -1,5 +1,5 @@
 // Container widths
-//
+
 // Set the container width, and override it for fixed navbars in media queries.
 
 @if $enable-grid-classes {
@@ -10,9 +10,8 @@
 }
 
 // Fluid container
-//
-// Utilizes the mixin meant for fixed width containers, but with 100% width for
-// fluid, full width layouts.
+
+// Utilizes the mixin meant for fixed width containers, but with 100% width for fluid, full width layouts.
 
 @if $enable-grid-classes {
   .container-fluid {
@@ -21,7 +20,7 @@
 }
 
 // Row
-//
+
 // Rows contain and clear the floats of your columns.
 
 @if $enable-grid-classes {
@@ -29,8 +28,7 @@
     @include make-row();
   }
 
-  // Remove the negative margin from default .row, then the horizontal padding
-  // from all immediate children columns (to prevent runaway style inheritance).
+  // Remove the negative margin from default .row, then the horizontal padding from all immediate children columns (to prevent runaway style inheritance).
   .no-gutters {
     margin-right: 0;
     margin-left: 0;
@@ -44,7 +42,7 @@
 }
 
 // Columns
-//
+
 // Common styles for small and large grid columns
 
 @if $enable-grid-classes {
