--- a/assets/css/bootstrap/_reboot.scss
+++ b/assets/css/bootstrap/_reboot.scss
@@ -1,15 +1,14 @@
 // stylelint-disable at-rule-no-vendor-prefix, declaration-no-important, selector-no-qualifying-type, property-no-vendor-prefix
 
 // Reboot
-//
-// Normalization of HTML elements, manually forked from Normalize.css to remove
-// styles targeting irrelevant browsers while applying new styles.
-//
+
+// Normalization of HTML elements, manually forked from Normalize.css to remove styles targeting irrelevant browsers while applying new styles.
+
 // Normalize is licensed MIT. https://github.com/necolas/normalize.css
 
 
 // Document
-//
+
 // 1. Change from `box-sizing: content-box` so that `width` is not affected by `padding` or `border`.
 // 2. Change the default font family in all browsers.
 // 3. Correct the line height in all browsers.
@@ -37,11 +36,10 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 }
 
 // Body
-//
+
 // 1. Remove the margin in all browsers.
 // 2. As a best practice, apply a default `background-color`.
-// 3. Set an explicit initial text-align value so that we can later use
-//    the `inherit` value on things like `<th>` elements.
+// 3. Set an explicit initial text-align value so that we can later use the `inherit` value on things like `<th>` elements.
 
 body {
   margin: 0; // 1
@@ -54,18 +52,16 @@ body {
   background-color: $body-bg; // 2
 }
 
-// Suppress the focus outline on elements that cannot be accessed via keyboard.
-// This prevents an unwanted focus outline from appearing around elements that
-// might still respond to pointer events.
-//
+// Suppress the focus outline on elements that cannot be accessed via keyboard. This prevents an unwanted focus outline from appearing around elements that might still respond to pointer events.
 // Credit: https://github.com/suitcss/base
+
 [tabindex="-1"]:focus {
   outline: 0 !important;
 }
 
 
 // Content grouping
-//
+
 // 1. Add the correct box sizing in Firefox.
 // 2. Show the overflow in Edge and IE.
 
@@ -76,31 +72,29 @@ hr {
 }
 
 
-//
 // Typography
-//
 
 // Remove top margins from headings
-//
-// By default, `<h1>`-`<h6>` all receive top and bottom margins. We nuke the top
-// margin for easier control within type scales as it avoids margin collapsing.
+
+// By default, `<h1>`-`<h6>` all receive top and bottom margins. We nuke the top margin for easier control within type scales as it avoids margin collapsing.
 // stylelint-disable-next-line selector-list-comma-newline-after
+
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: $headings-margin-bottom;
 }
 
 // Reset margins on paragraphs
-//
-// Similarly, the top margin on `<p>`s get reset. However, we also reset the
-// bottom margin to use `rem` units instead of `em`.
+
+// Similarly, the top margin on `<p>`s get reset. However, we also reset the bottom margin to use `rem` units instead of `em`.
+
 p {
   margin-top: 0;
   margin-bottom: $paragraph-margin-bottom;
 }
 
 // Abbreviations
-//
+
 // 1. Duplicate behavior to the data-* attribute for our tooltip plugin
 // 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
 // 3. Add explicit cursor to indicate changed behavior.
@@ -158,10 +152,7 @@ small {
   @include font-size(80%); // Add the correct font size in all browsers
 }
 
-//
-// Prevent `sub` and `sup` elements from affecting the line height in
-// all browsers.
-//
+// Prevent `sub` and `sup` elements from affecting the line height in all browsers.
 
 sub,
 sup {
@@ -175,9 +166,7 @@ sub { bottom: -.25em; }
 sup { top: -.5em; }
 
 
-//
 // Links
-//
 
 a {
   color: $link-color;
@@ -190,10 +179,7 @@ a {
   }
 }
 
-// And undo these styles for placeholder links/named anchors (without href)
-// which have not been made explicitly keyboard-focusable (without tabindex).
-// It would be more straightforward to just use a[href] in previous block, but that
-// causes specificity issues in many other styles that are too complex to fix.
+// And undo these styles for placeholder links/named anchors (without href) which have not been made explicitly keyboard-focusable (without tabindex). It would be more straightforward to just use a[href] in previous block, but that causes specificity issues in many other styles that are too complex to fix.
 // See https://github.com/twbs/bootstrap/issues/19402
 
 a:not([href]):not([tabindex]) {
@@ -211,9 +197,7 @@ a:not([href]):not([tabindex]) {
 }
 
 
-//
 // Code
-//
 
 pre,
 code,
@@ -233,9 +217,7 @@ pre {
 }
 
 
-//
 // Figures
-//
 
 figure {
   // Apply a consistent margin strategy (matches our type styles).
@@ -243,9 +225,7 @@ figure {
 }
 
 
-//
 // Images and content
-//
 
 img {
   vertical-align: middle;
@@ -260,9 +240,7 @@ svg {
 }
 
 
-//
 // Tables
-//
 
 table {
   border-collapse: collapse; // Prevent double borders
@@ -277,15 +255,12 @@ caption {
 }
 
 th {
-  // Matches default `<td>` alignment by inheriting from the `<body>`, or the
-  // closest parent with a set `text-align`.
+  // Matches default `<td>` alignment by inheriting from the `<body>`, or the closest parent with a set `text-align`.
   text-align: inherit;
 }
 
 
-//
 // Forms
-//
 
 label {
   // Allow labels to use `margin` for spacing.
@@ -294,17 +269,17 @@ label {
 }
 
 // Remove the default `border-radius` that macOS Chrome adds.
-//
 // Details at https://github.com/twbs/bootstrap/issues/24093
+
 button {
   // stylelint-disable-next-line property-blacklist
   border-radius: 0;
 }
 
-// Work around a Firefox/IE bug where the transparent `button` background
-// results in a loss of the default `button` focus styles.
-//
+// Work around a Firefox/IE bug where the transparent `button` background results in a loss of the default `button` focus styles.
+
 // Credit: https://github.com/suitcss/base/
+
 button:focus {
   outline: 1px dotted;
   outline: 5px auto -webkit-focus-ring-color;
@@ -332,16 +307,17 @@ select {
 }
 
 // Remove the inheritance of word-wrap in Safari.
-//
+
 // Details at https://github.com/twbs/bootstrap/issues/24990
+
 select {
   word-wrap: normal;
 }
 
 
-// 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
-//    controls in Android 4.
+// 1. Prevent a WebKit bug where (2) destroys native `audio` and `video` controls in Android 4.
 // 2. Correct the inability to style clickable types in iOS and Safari.
+
 button,
 [type="button"], // 1
 [type="reset"],
@@ -350,6 +326,7 @@ button,
 }
 
 // Opinionated: add "hand" cursor to non-disabled button elements.
+
 @if $enable-pointer-cursor-for-buttons {
   button,
   [type="button"],
@@ -362,6 +339,7 @@ button,
 }
 
 // Remove inner border and padding from Firefox, but don't restore the outline like Normalize.
+
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
@@ -381,26 +359,19 @@ input[type="date"],
 input[type="time"],
 input[type="datetime-local"],
 input[type="month"] {
-  // Remove the default appearance of temporal inputs to avoid a Mobile Safari
-  // bug where setting a custom line-height prevents text from being vertically
-  // centered within the input.
-  // See https://bugs.webkit.org/show_bug.cgi?id=139848
-  // and https://github.com/twbs/bootstrap/issues/11266
+  // Remove the default appearance of temporal inputs to avoid a Mobile Safari bug where setting a custom line-height prevents text from being vertically centered within the input.
+  // See https://bugs.webkit.org/show_bug.cgi?id=139848 and https://github.com/twbs/bootstrap/issues/11266
   -webkit-appearance: listbox;
 }
 
 textarea {
-  overflow: auto; // Remove the default vertical scrollbar in IE.
-  // Textareas should really only resize vertically so they don't break their (horizontal) containers.
+  overflow: auto; // Remove the default vertical scrollbar in IE. Textareas should really only resize vertically so they don't break their (horizontal) containers.
   resize: vertical;
 }
 
 fieldset {
-  // Browsers set a default `min-width: min-content;` on fieldsets,
-  // unlike e.g. `<div>`s, which have `min-width: 0;` by default.
-  // So we reset that to ensure fieldsets behave more like a standard block element.
-  // See https://github.com/twbs/bootstrap/issues/12359
-  // and https://html.spec.whatwg.org/multipage/#the-fieldset-and-legend-elements
+  // Browsers set a default `min-width: min-content;` on fieldsets, unlike e.g. `<div>`s, which have `min-width: 0;` by default. So we reset that to ensure fieldsets behave more like a standard block element.
+  // See https://github.com/twbs/bootstrap/issues/12359 and https://html.spec.whatwg.org/multipage/#the-fieldset-and-legend-elements
   min-width: 0;
   // Reset the default outline behavior of fieldsets so they don't affect page layout.
   padding: 0;
@@ -410,6 +381,7 @@ fieldset {
 
 // 1. Correct the text wrapping in Edge and IE.
 // 2. Correct the color inheritance from `fieldset` elements in IE.
+
 legend {
   display: block;
   width: 100%;
@@ -427,41 +399,33 @@ progress {
 }
 
 // Correct the cursor style of increment and decrement buttons in Chrome.
+
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
 [type="search"] {
-  // This overrides the extra rounded corners on search inputs in iOS so that our
-  // `.form-control` class can properly style them. Note that this cannot simply
-  // be added to `.form-control` as it's not specific enough. For details, see
-  // https://github.com/twbs/bootstrap/issues/11586.
+  // This overrides the extra rounded corners on search inputs in iOS so that our `.form-control` class can properly style them. Note that this cannot simply be added to `.form-control` as it's not specific enough. For details, see https://github.com/twbs/bootstrap/issues/11586.
   outline-offset: -2px; // 2. Correct the outline style in Safari.
   -webkit-appearance: none;
 }
 
-//
 // Remove the inner padding in Chrome and Safari on macOS.
-//
 
 [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
-//
 // 1. Correct the inability to style clickable types in iOS and Safari.
 // 2. Change font properties to `inherit` in Safari.
-//
 
 ::-webkit-file-upload-button {
   font: inherit; // 2
   -webkit-appearance: button; // 1
 }
 
-//
 // Correct element displays
-//
 
 output {
   display: inline-block;
@@ -476,8 +440,7 @@ template {
   display: none; // Add the correct display in IE
 }
 
-// Always hide an element with the `hidden` HTML attribute (from PureCSS).
-// Needed for proper display in IE 10-.
+// Always hide an element with the `hidden` HTML attribute (from PureCSS). Needed for proper display in IE 10-.
 [hidden] {
   display: none !important;
 }
