--- a/assets/css/bootstrap/_badge.scss
+++ b/assets/css/bootstrap/_badge.scss
@@ -1,7 +1,6 @@
 // Base class
-//
-// Requires one of the contextual, color modifier classes for `color` and
-// `background-color`.
+
+// Requires one of the contextual, color modifier classes for `color` and `background-color`.
 
 .badge {
   display: inline-block;
@@ -34,7 +33,7 @@
 }
 
 // Pill badges
-//
+
 // Make them extra rounded with a modifier to replace v3's badges.
 
 .badge-pill {
@@ -44,7 +43,7 @@
 }
 
 // Colors
-//
+
 // Contextual variations (linked badges get darker on :hover).
 
 @each $color, $value in $theme-colors {
