--- a/assets/css/bootstrap/_button-group.scss
+++ b/assets/css/bootstrap/_button-group.scss
@@ -11,8 +11,7 @@
     position: relative;
     flex: 1 1 auto;
 
-    // Bring the hover, focused, and "active" buttons to the front to overlay
-    // the borders properly
+    // Bring the hover, focused, and "active" buttons to the front to overlay the borders properly
     @include hover {
       z-index: 1;
     }
@@ -55,16 +54,14 @@
 }
 
 // Sizing
-//
+
 // Remix the default button sizing classes into new ones for easier manipulation.
 
 .btn-group-sm > .btn { @extend .btn-sm; }
 .btn-group-lg > .btn { @extend .btn-lg; }
 
 
-//
 // Split button dropdowns
-//
 
 .dropdown-toggle-split {
   padding-right: $btn-padding-x * .75;
@@ -104,9 +101,7 @@
 }
 
 
-//
 // Vertical button groups
-//
 
 .btn-group-vertical {
   flex-direction: column;
@@ -137,16 +132,9 @@
 
 
 // Checkbox and radio options
-//
-// In order to support the browser's form validation feedback, powered by the
-// `required` attribute, we have to "hide" the inputs via `clip`. We cannot use
-// `display: none;` or `visibility: hidden;` as that also hides the popover.
-// Simply visually hiding the inputs via `opacity` would leave them clickable in
-// certain cases which is prevented by using `clip` and `pointer-events`.
-// This way, we ensure a DOM element is visible to position the popover from.
-//
-// See https://github.com/twbs/bootstrap/pull/12794 and
-// https://github.com/twbs/bootstrap/pull/14559 for more information.
+
+// In order to support the browser's form validation feedback, powered by the `required` attribute, we have to "hide" the inputs via `clip`. We cannot use `display: none;` or `visibility: hidden;` as that also hides the popover. Simply visually hiding the inputs via `opacity` would leave them clickable in certain cases which is prevented by using `clip` and `pointer-events`. This way, we ensure a DOM element is visible to position the popover from.
+// See https://github.com/twbs/bootstrap/pull/12794 and https://github.com/twbs/bootstrap/pull/14559 for more information.
 
 .btn-group-toggle {
   > .btn,
