--- a/assets/css/bootstrap/_carousel.scss
+++ b/assets/css/bootstrap/_carousel.scss
@@ -1,15 +1,10 @@
 // Notes on the classes:
-//
-// 1. .carousel.pointer-event should ideally be pan-y (to allow for users to scroll vertically)
-//    even when their scroll action started on a carousel, but for compatibility (with Firefox)
-//    we're preventing all actions instead
-// 2. The .carousel-item-left and .carousel-item-right is used to indicate where
-//    the active slide is heading.
+
+// 1. .carousel.pointer-event should ideally be pan-y (to allow for users to scroll vertically) even when their scroll action started on a carousel, but for compatibility (with Firefox) we're preventing all actions instead
+// 2. The .carousel-item-left and .carousel-item-right is used to indicate where the active slide is heading.
 // 3. .active.carousel-item is the current slide.
-// 4. .active.carousel-item-left and .active.carousel-item-right is the current
-//    slide in its in-transition state. Only one of these occurs at a time.
-// 5. .carousel-item-next.carousel-item-left and .carousel-item-prev.carousel-item-right
-//    is the upcoming slide in transition.
+// 4. .active.carousel-item-left and .active.carousel-item-right is the current slide in its in-transition state. Only one of these occurs at a time.
+// 5. .carousel-item-next.carousel-item-left and .carousel-item-prev.carousel-item-right is the upcoming slide in transition.
 
 .carousel {
   position: relative;
@@ -53,9 +48,7 @@
 }
 
 
-//
 // Alternate transitions
-//
 
 .carousel-fade {
   .carousel-item {
@@ -80,9 +73,7 @@
 }
 
 
-//
 // Left/right controls for nav
-//
 
 .carousel-control-prev,
 .carousel-control-next {
@@ -138,9 +129,8 @@
 
 
 // Optional indicator pips
-//
-// Add an ordered list with the following class and add a list item for each
-// slide your carousel holds.
+
+// Add an ordered list with the following class and add a list item for each slide your carousel holds.
 
 .carousel-indicators {
   position: absolute;
@@ -181,8 +171,6 @@
 
 
 // Optional captions
-//
-//
 
 .carousel-caption {
   position: absolute;
