--- a/assets/css/bootstrap/_nav.scss
+++ b/assets/css/bootstrap/_nav.scss
@@ -1,7 +1,6 @@
 // Base class
-//
-// Kickstart any navigation component with a set of style resets. Works with
-// `<nav>`s or `<ul>`s.
+
+// Kickstart any navigation component with a set of style resets. Works with `<nav>`s or `<ul>`s.
 
 .nav {
   display: flex;
@@ -27,9 +26,7 @@
   }
 }
 
-//
 // Tabs
-//
 
 .nav-tabs {
   border-bottom: $nav-tabs-border-width solid $nav-tabs-border-color;
@@ -69,9 +66,7 @@
 }
 
 
-//
 // Pills
-//
 
 .nav-pills {
   .nav-link {
@@ -86,9 +81,7 @@
 }
 
 
-//
 // Justified variants
-//
 
 .nav-fill {
   .nav-item {
@@ -107,7 +100,7 @@
 
 
 // Tabbable tabs
-//
+
 // Hide tabbable panes to start, show them when `.active`
 
 .tab-content {
