--- a/assets/css/bootstrap/_tables.scss
+++ b/assets/css/bootstrap/_tables.scss
@@ -1,6 +1,4 @@
-//
 // Basic Bootstrap table
-//
 
 .table {
   width: 100%;
@@ -26,9 +24,7 @@
 }
 
 
-//
 // Condensed table w/ half padding
-//
 
 .table-sm {
   th,
@@ -39,7 +35,7 @@
 
 
 // Border versions
-//
+
 // Add or remove borders all around the table and between all the columns.
 
 .table-bordered {
@@ -68,7 +64,7 @@
 }
 
 // Zebra-striping
-//
+
 // Default zebra-stripe styles (alternating gray and transparent backgrounds)
 
 .table-striped {
@@ -79,7 +75,7 @@
 
 
 // Hover effect
-//
+
 // Placed here since it has to come after the potential zebra striping
 
 .table-hover {
@@ -93,9 +89,8 @@
 
 
 // Table backgrounds
-//
-// Exact selectors below required to override `.table-striped` and prevent
-// inheritance to nested tables.
+
+// Exact selectors below required to override `.table-striped` and prevent inheritance to nested tables.
 
 @each $color, $value in $theme-colors {
   @include table-row-variant($color, theme-color-level($color, $table-bg-level), theme-color-level($color, $table-border-level));
@@ -105,7 +100,7 @@
 
 
 // Dark styles
-//
+
 // Same table markup, but inverted color scheme: dark background and light text.
 
 // stylelint-disable-next-line no-duplicate-selectors
@@ -159,9 +154,8 @@
 
 
 // Responsive tables
-//
-// Generate series of `.table-responsive-*` classes for configuring the screen
-// size of where your table will overflow.
+
+// Generate series of `.table-responsive-*` classes for configuring the screen size of where your table will overflow.
 
 .table-responsive {
   @each $breakpoint in map-keys($grid-breakpoints) {
